--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,32 @@
+python-distutils-extra (2.38-1) unstable; urgency=low
+
+  [ Jeremy Bicha ]
+  * build_help.py: Use yelp-tools style help installation.
+    - Help is installed to /usr/share/help/ instead of /usr/share/gnome/help/
+    - Delete your .omf files since they are ignored
+    - Rename your main docbook help to index.docbook instead of foo.xml
+    - Link to help:foo/bar instead of ghelp:foo?bar
+
+  [ Martin Pitt ]
+  * debian/copyright: Fix duplicate Copyright: field.
+  * Bump Standards-Version to 3.9.4.
+
+ -- Martin Pitt <mpitt@debian.org>  Mon, 22 Jul 2013 17:46:42 +0200
+
+python-distutils-extra (2.37-1) unstable; urgency=low
+
+  [ Martin Pitt ]
+  * auto.py: Recognize manpages which have comments before the initial .TH
+    comment. Thanks to Dominique Lasserre for the initial patch!
+    (LP: #893337)
+
+  [ Andrew Starr-Bochicchio ]
+  * debian/local/python-mkdebian: Handle Glade .ui files correctly when
+    generating the copyright file. Also ignore backup files.
+    (LP: #1025491)
+
+ -- Martin Pitt <mpitt@debian.org>  Mon, 17 Sep 2012 12:47:44 +0200
+
 python-distutils-extra (2.36-1) unstable; urgency=low
 
   * debian/rules: Run tests against all supported python 2 and 3 versions.
